# social-world-model

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Experiments_doc.md  README.md  VERCEL_PYTHON_INTEGRATION.md  VERCEL_PYTHON_README.md  VERCEL_README.md  analyze.py  create_flawfictions_training_data.py  eval_hitom.ipynb  eval_hitom.py  eval_hitom_contexts.ipynb  eval_impl.ipynb  example.py  example_fantom.py  example_tomi.py  next.config.js  package.json  pyproject.toml  reproduce_jiarui.md  requirements.txt  run_benchmarks.py  run_benchmarks_agent_baselines.py  run_dynamic.py  run_socialized_context_eval.py  run_tom_benchmarks.py  socialized_context.json  test_api.py  test_vllm_simple.py  vercel.json
.github/workflows/: mypy.yml  pre-commit.yml
api/: README.md  index.py
api/ai/: index.py
app/: page.tsx
public/: index.html
scripts/: create_flawfictions_training_data.py  prepare_diamonds_data.py  run_benchmark_all.sh  run_benchmark_paratomi_ablation.sh  run_competitive_experiment.sh  run_cooperative_experiment.sh  run_dynamic_experiments.sh  run_missing_experiments.sh  run_neurips_rubbtal.sh  run_vanilla_experiments.sh  train_parser.py
social_world_model/: social_world_model.py  social_world_model_eval.py  tom_engine.py
social_world_model/agents/: __init__.py  llm_agent.py  pydantic_agent.py  sotopia_agent.py
social_world_model/database/: __init__.py  database.py
social_world_model/engine/: __init__.py  decode.py  utils.py
social_world_model/generation_utils/: __init__.py  generate.py  model_cache.py  vllm_backend.py
social_world_model/task_modules/: __init__.py  cobra_frames.py  confaide.py  diamonds.py  exploretom.py  fantom.py  flawfictions.py  hitom.py  lifechoices.py  mmtom.py  negotiationtom.py  response_models.py  tomi.py  utils.py
tests/: test_social_world_model.py
training/: README.md  data_utils.py  finetune_config.yaml  finetune_socialized_context.py  finetune_verl_sft.py  verl_sft_config.yaml
ui/: README.md  VERCEL_PYTHON_INTEGRATION.md  bun.lockb  next.config.js  next.config.mjs  package-lock.json  package.json  tailwind.config.js  vercel.json
ui/api/: index.py
ui/app/: layout.tsx
ui/public/: test.html
ui/src/app/: layout.tsx  page.tsx
ui/src/components/: ActionView.tsx  AgentPresence.tsx  ConversationView.tsx  JsonInputModal.tsx  TimeStep.tsx  Timeline.tsx
ui/src/data/: socialData.json
ui/src/types/: index.ts
